[1.6.0] Action, condition and fixes

--- a/src/main/resources/languages/en_US.yml
+++ b/src/main/resources/languages/en_US.yml
@@ -37,3 +37,4 @@ deapply-item-success: "&#98FB98[MythicChanger] &fSuccess consume rollback item!"
 already-has-rule: "&#98FB98[MythicChanger] &fThis item already has applied other rule!"
 do-not-has-rule: "&#98FB98[MythicChanger] &fThis item does not have any rule to rollback!"
 do-not-apply: "&#98FB98[MythicChanger] &fThis apply item does not work on this item!"
+not-meet-condition: "&#98FB98[MythicChanger] &fYou can't use this item because you didn't meet the condition of the rule the item related to!"
