[2.1.0] Powerful item format support

--- a/src/main/resources/languages/en_US.yml
+++ b/src/main/resources/languages/en_US.yml
@@ -38,7 +38,8 @@ nbt-view-empty: "&#98FB98[MythicChanger] &fThis item does not has any custom NBT
 nbt-view: "&#98FB98[MythicChanger] &fThis item has those NBT content:"
 apply-item-success: "&#98FB98[MythicChanger] &fSuccess consume apply item!"
 deapply-item-success: "&#98FB98[MythicChanger] &fSuccess consume rollback item!"
-already-has-rule: "&#98FB98[MythicChanger] &fThis item already has applied other rule!"
+rule-limit-reached: "&#98FB98[MythicChanger] &fThis item reached it's apply item rule limit!"
 do-not-has-rule: "&#98FB98[MythicChanger] &fThis item does not have any rule to rollback!"
 do-not-apply: "&#98FB98[MythicChanger] &fThis apply item does not work on this item!"
+success-set-limit: "&#98FB98[MythicChanger] &fSuccessfully set this item apply limit to {limit}!"
 not-meet-condition: "&#98FB98[MythicChanger] &fYou can't use this item because you didn't meet the condition of the rule the item related to!"
